# sse

./: .clang-format  .gitignore  CMakeLists.txt  Justfile  README.md
.claude/agents/: designer.md  programmer.md  tester.md
.github/workflows/: ci.yml
scripts/: sse_client.sh
src/: main.c
src/arch/: accept.h  close.h  epoll.h  file_read.h  file_write.h  fstat.h  fsync.h  listen.h  memory.h  mkdir.h  mmap.h  open.h  optimize_socket.h  recv.h  send.h  sigaction.h  write.h
src/arch/linux/: epoll.h  errno.h  fcntl.h  fcntl_def.h  mmap_def.h  sigaction_def.h  sockaddr.h  sockoption.h  stat_def.h
src/arch/linux/x86_64/: accept.h  asm.h  asm_syscall.S  close.h  epoll.h  file_read.h  file_write.h  fstat.h  fsync.h  listen.h  memory.h  mkdir.h  mmap.h  open.h  optimize_socket.h  recv.h  send.h  sigaction.h  write.h
src/http/: http.c  http.h
src/sse/: sse.c  sse.h  sse_conn.c  sse_conn.h  sse_event.c  sse_event.h  sse_stream.c  sse_stream.h
src/util/: allocator.h  log.c  log.h  signal.c  signal.h  string.h  types.h
tests/: CMakeLists.txt
tests/integration/: test_sse_server.cpp
tests/unit/: test_sse_conn.cpp  test_sse_event.cpp  test_sse_server_api.cpp  test_sse_stream.cpp
